[Silver IV] Title: 큐 2, Time: 1404 ms, Memory: 350860 KB -BaekjoonHub